@@ -1,3 +1,7 @@
+2007-07-11  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* CollectionView.cs: More work.
+
 2007-07-10  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* CollectionView.cs: More work.
